--- a/src/env/.env
+++ b/src/env/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=''
+DB_HOST=b25nfxtt2xstpgm0479p-mysql.services.clever-cloud.com
+DB_NAME=b25nfxtt2xstpgm0479p
+DB_PASSWORD=ee1wBPQqGR8Dl1BkhiS3
 DB_PORT=3306
-DB_NAME=adopcion_mascotas
+DB_USER=u00ujg0du6gsaps9
 
 AUT_SECRET=estoesmuysecreto
 AUT_EXPIRE=20h
